objects/ASI_CRM_Outlet_Type__c.object
<CustomObject>
    <description>ASI PROS Outlet Type</description>
    <fields>
        <fullName>ASI_CRM_SG_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Description__c</fullName>
        <description>For the following affiliates:
1. SFA Lite</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Group_Outlet_Type_Name__c</fullName>
        <formula>TEXT(ASI_CRM_SG_Group_Outlet_Type__r.ASI_CRM_SG_Group_Outlet_Name__c)</formula>
        <label>Group Outlet Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Group_Outlet_Type__c</fullName>
        <label>Group Outlet Type</label>
        <referenceTo>ASI_CRM_Group_Outlet_Type__c</referenceTo>
        <relationshipLabel>Outlet Types</relationshipLabel>
        <relationshipName>ASI_PROS_Outlet_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Main_Sector__c</fullName>
        <label>Main Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional On Trade</fullName>
                </value>
                <value>
                    <fullName>Hotels &amp; Restaurant</fullName>
                </value>
                <value>
                    <fullName>Modern On Trade</fullName>
                </value>
                <value>
                    <fullName>Offtrade</fullName>
                </value>
                <value>
                    <fullName>Hotels &amp; Restaurants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Name__c</fullName>
        <label>Outlet Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Outlet Type</label>
    <listViews>
        <fullName>ASI_CRM_TW_Outlet_Types</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type__c</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type_Name__c</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Outlet_Type__c.ASI_CRM_TW_Outlet_Type</value>
        </filters>
        <label>TW Outlet Types</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type_Name__c</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <columns>ASI_CRM_SG_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MY</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Active__c</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type__c</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type_Name__c</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Outlet_Type__c.ASI_CRM_MY_Outlet_Type</value>
        </filters>
        <label>MY</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SG_Active</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Active__c</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type__c</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type_Name__c</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <columns>ASI_CRM_SG_Main_Sector__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Outlet_Type__c.ASI_CRM_SG_Outlet_Type</value>
        </filters>
        <filters>
            <field>ASI_CRM_SG_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SG - Active</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SG_All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Active__c</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type__c</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type_Name__c</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <columns>ASI_CRM_SG_Main_Sector__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Outlet_Type__c.ASI_CRM_SG_Outlet_Type</value>
        </filters>
        <label>SG - All</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SG_Inactive</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Active__c</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type__c</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type_Name__c</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <columns>ASI_CRM_SG_Main_Sector__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Outlet_Type__c.ASI_CRM_SG_Outlet_Type</value>
        </filters>
        <filters>
            <field>ASI_CRM_SG_Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>SG - Inactive</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>O-{00000}</displayFormat>
        <label>Outlet Type No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outlet Types</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_Outlet_Type</fullName>
        <active>true</active>
        <label>ASI CRM MY Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Outlet_Type</fullName>
        <active>true</active>
        <label>ASI CRM SG Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Outlet_Type</fullName>
        <active>true</active>
        <label>ASI CRM TH Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Outlet_Type</fullName>
        <active>true</active>
        <label>ASI CRM TW Outlet Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>